feat: implement report url and reported satus history
