# models/__init__.py
@@ -18,6 +18,8 @@ from .model_registry_model import ModelRegistryModel as ModelRegistryModelDb
 from .access_key_model import AccessKeyModel as AccessKeyModelDb
 from .url_flag_model import UrlFlagModel as UrlFlagModelDb
 from .url_report_model import UrlReportModel as UrlReportModelDb
+from .url_reported_model import UrlReportedModel as UrlReportedModelDb
+from .url_report_request import UrlReportCreateRequest, UrlReportUpdateRequest
 from .activity_log_model import ActivityLogModel as ActivityLogModelDb
 from .usage_log_model import UsageLogModel as UsageLogModelDb
 from .third_service_conf_model import ThirdServiceConfModel as ThirdServiceConfModelDb
@@ -148,9 +150,14 @@ __all__ = [
     "AccessKeyModelDb",
     "UrlFlagModelDb",
     "UrlReportModelDb",
+    "UrlReportedModelDb",
     "ActivityLogModelDb",
     "UsageLogModelDb",
     "ThirdServiceConfModelDb",
+    
+    # URL Report Request Models
+    "UrlReportCreateRequest",
+    "UrlReportUpdateRequest",
     
     # Third Service Models
     "BodyTemplateItem",
